<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_launcher_name">Launcher</string>
    <string name="settings_version">Version %s</string>
    <string name="launcher_settings">Settings</string>
    <string name="app_info">App info</string>
    <string name="touch_hold_widget">Long press the widget and drag it on your home screen</string>
    <string name="uninstall">Uninstall</string>
    <string name="hide_icon">Hide icon</string>
    <string name="pin_app">Favourite</string>
    <string name="unpin_app">Unfavourite</string>
    <string name="favourites_header">Favourites</string>
    <string name="add_hidden_icons">Add hidden icons</string>
    <string name="manage_hidden_icons">Manage hidden icons</string>
    <string name="hidden_icons">Hidden icons</string>
    <string name="hidden_icons_placeholder">Some apps cannot be uninstalled due to system restrictions, but you can at least hide their icons to avoid seeing them.</string>
    <string name="app_drawer_settings">App drawer</string>
    <string name="app_drawer_settings_description">Search, columns, labels</string>
    <string name="columns">Columns</string>
    <string name="dock_columns">Dock columns</string>
    <string name="close_app_drawer_on_app_open">Close app drawer on opening an app</string>
    <string name="auto_show_keyboard_in_app_drawer">Automatically show keyboard in drawer</string>
    <string name="show_app_labels">Show app labels</string>
    <string name="drawer_label_max_lines">Maximum label lines</string>
    <string name="drawer_icon_scale">Icon scale</string>
    <string name="drawer_label_font_size">Label font size</string>
    <string name="drawer_labels_settings">Labels</string>
    <string name="use_default_drawer_colors">Use default theme colours</string>
    <string name="select_color">Select colour</string>
    <string name="drawer_background_color">Background colour</string>
    <string name="drawer_text_color">Label colour</string>
    <string name="icon_pack">Icon pack</string>
    <string name="show_favourites_divider">Divide favourites from other apps</string>
    <string name="show_drawer_icon_drop_shadow">Icon drop shadow</string>
    <string name="icons_subsection">Icons</string>
    <string name="icons_subsection_description">Icon packs, shape, reshaping</string>
    <string name="icon_preview_label">Launcher</string>
    <string name="reshape_all_icons">Reshape all icons</string>
    <string name="icon_shape">Icon shape</string>
    <string name="icon_shape_circle">Circle</string>
    <string name="icon_shape_squircle">Squircle</string>
    <string name="icon_shape_square">Square</string>
    <string name="icon_shape_ios">iOS</string>
    <string name="icon_shape_one_ui">OneUI</string>
    <string name="notification_badges">Notification badges</string>
    <string name="notification_badges_description">Colour, shape, count</string>
    <string name="notification_badge_color">Badge colour</string>
    <string name="notification_badge_shape">Badge shape</string>
    <string name="show_notification_count">Show notification count</string>
    <string name="notification_badge_shape_circle">Circle</string>
    <string name="notification_badge_shape_rounded_square">Rounded square</string>
    <string name="notification_badge_shape_sharp_square">Sharp square</string>
    <string name="notification_access_required">Notification access is required to show badges</string>
    <string name="home_screen_settings">Home screen</string>
    <string name="home_screen_settings_description">Columns, icon scale, labels</string>
    <string name="home_icon_scale">Icon scale</string>
    <string name="home_label_max_lines">Maximum label lines</string>
    <string name="widget_too_big">Widget is too big for current home screen size</string>
    <string name="double_tap_to_lock">Double tap to lock screen</string>
    <string name="lock_device_admin_hint">To enable the double tap to lock screen feature, you need to grant admin permission. Note that the app cannot be uninstalled until this permission is removed.</string>
    <string name="lock_device_admin_warning">Deactivating admin permission will disable the double tap to lock screen feature.</string>
    <string name="add_to_home_screen">Add to home screen</string>
    <string name="add">Add</string>
    <string name="n_apps_selected">%1$d selected</string>
    <string name="new_folder">New folder</string>
    <string name="remove_from_folder">Remove from folder</string>
    <string name="rename_folder">Rename folder</string>
    <string name="delete_folder">Delete folder</string>
    <string name="delete_folder_confirmation">Delete this folder? Its apps will move back to the main app drawer.</string>
    <!--
        Haven't found some strings? There's more at
        https://github.com/FossifyOrg/Commons/tree/master/commons/src/main/res
    -->
</resources>
